test/syntax_err/syntax_err.py
# syntax error will be inserted by test here
